test/valid/mutable-assign-app.js
function f(x) { return x; }

var x = f(3);

f('a');
