test/invalid/bug4.js
var x = function(z) { return z; };
var z = x(true);
var y = x('a');
x = function(z1) { return z1; };
x;
